# akros

./: 99-usb-serial.rules  README.md  akros.rviz  package.xml
.ipynb_checkpoints/: 99-usb-serial-checkpoint.rules  CMakeLists-checkpoint.txt  LICENSE-checkpoint  README-checkpoint.md  akros-checkpoint.service  package-checkpoint.xml
akros/: README.md  package.xml
akros_behaviors/: CMakeLists.txt  package.xml
akros_behaviors/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  README-checkpoint.md
akros_behaviors/config/: waypoints_bt.yaml  waypoints_store.yaml
akros_behaviors/config/.ipynb_checkpoints/: test-checkpoint.py  waypoints_store-checkpoint.yaml
akros_behaviors/include/: navigation_behaviors.h
akros_behaviors/launch/: demo_waypoint_player.launch
akros_behaviors/launch/.ipynb_checkpoints/: demo_patrol-checkpoint.launch  demo_waypoint_player-checkpoint.launch
akros_behaviors/scripts/: waypoint_sequence_player.py  waypoint_sequence_store.py
akros_behaviors/scripts/.ipynb_checkpoints/: waypoint_sequence_player-checkpoint.py
akros_behaviors/src/.ipynb_checkpoints/: waypoint_sequence-checkpoint.cpp
akros_behaviors/src/behaviors/: navigation_behaviors.cpp
akros_behaviors/src/behaviors/.ipynb_checkpoints/: navigation_behaviors-checkpoint.cpp
akros_behaviors/trees/: waypoint_sequence_bt.xml
akros_bringup/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
akros_bringup/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  package-checkpoint.xml
akros_bringup/config/: holonomic_twist_marker.yaml  oakd_ekf_params.yaml  oakd_enc_ekf_params.yaml  t265_ekf_params.yaml  t265_encoder_config.json
akros_bringup/config/.ipynb_checkpoints/: t265_ekf_params-checkpoint.yaml  twist_mux_config-checkpoint.yaml
akros_bringup/launch/: akros_description.launch  demo_bringup.launch  demo_bringup_2d.launch  demo_oakd.launch  ldlidar_ld06.launch  oakd_rgbd.launch  oakd_rgbd_inertial.launch  oakd_rgbd_pointcloud.launch  oakd_stereo.launch  rosserial_arduino.launch  rplidar_a2.launch  rs_t265.launch
akros_bringup/launch/.ipynb_checkpoints/: akros_description-checkpoint.launch  demo_bringup-checkpoint.launch  demo_bringup_3d-checkpoint.launch  demo_oakd-checkpoint.launch  ds4_drive-checkpoint.launch  ldlidar_ld06-checkpoint.launch  oakd_rgb-checkpoint.launch  oakd_rgbd-checkpoint.launch  oakd_rgbd_inertial-checkpoint.launch  oakd_stereo_pointcloud-checkpoint.launch  rosserial_arduino-checkpoint.launch  rs_t265-checkpoint.launch
akros_bringup/nodes/.ipynb_checkpoints/: twist_mixer-checkpoint.py
akros_bringup/scripts/: arduino_odometry.py  twist_mixer.py
akros_bringup/scripts/.ipynb_checkpoints/: arduino_odometry-checkpoint.py  twist_mixer-checkpoint.py
akros_bringup/src/: oakd_rgbd_inertial_nodelet.cpp  oakd_rgbd_inertial_publisher.cpp  spatial_detections.cpp
akros_bringup/src/.ipynb_checkpoints/: mono_detections-checkpoint.cpp
akros_description/: CMakeLists.txt  ld06.stl  package.xml  t265.stl  wheel_right_front.stl
akros_description/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  README-checkpoint.md  package-checkpoint.xml
akros_description/launch/: akros_description.launch  akros_gazebo.launch
akros_description/launch/.ipynb_checkpoints/: akros_description-checkpoint.launch  akros_gazebo-checkpoint.launch
akros_description/meshes/: base_module_centered.glb  ld06.glb  navigation_module_centered.glb  navigation_module_centered.stl  t265.glb  wheel_left_back.glb  wheel_left_back.stl  wheel_left_front.glb  wheel_left_front.stl  wheel_right_back.glb  wheel_right_back.stl  wheel_right_front.glb  wireless_charger_tx.stl
akros_description/scripts/: mesh_publisher.py
akros_description/scripts/.ipynb_checkpoints/: mesh_publisher-checkpoint.py
akros_description/urdf/: akros.urdf.xacro  akros_t265_only.urdf.xacro  akros_t265_with_encoders.urdf.xacro  akros_top.urdf.xacro
akros_description/urdf/.ipynb_checkpoints/: akros.urdf-checkpoint.xacro  akros_t265_only.urdf-checkpoint.xacro  akros_t265_with_encoders.urdf-checkpoint.xacro  akros_top.urdf-checkpoint.xacro  akros_top_t265.urdf-checkpoint.xacro
akros_msgs/: README.md
akros_navigation/: CMakeLists.txt  README.md
akros_slam/: package.xml
akros_teleop/: CMakeLists.txt  README.md
akros_teleop/.ipynb_checkpoints/: package-checkpoint.xml
akros_teleop/config/: assisted_teleop_params.yaml  ds4_twist_3dof.yaml
akros_teleop/config/.ipynb_checkpoints/: assisted_teleop_params-checkpoint.yaml  ds4_twist_3dof-checkpoint.yaml
akros_teleop/launch/: ds4_drive.launch  teleop_twist_keyboard.launch
akros_teleop/launch/.ipynb_checkpoints/: ds4_drive-checkpoint.launch
akros_teleop/scripts/: ds4_feedback_node.py
akros_teleop/scripts/.ipynb_checkpoints/: ds4_feedback_node-checkpoint.py  ds4_twist_node-checkpoint.py
akros_test/: CMakeLists.txt  package.xml
akros_test/.ipynb_checkpoints/: nodelet_plugins-checkpoint.xml  package-checkpoint.xml
akros_test/launch/: demo_bringup_oakd.launch
akros_test/launch/.ipynb_checkpoints/: demo_fiducial_slam-checkpoint.launch  oakd_description-checkpoint.launch  oakd_rgbdi_nodelet-checkpoint.launch
akros_test/launch/base_launch/.ipynb_checkpoints/: aruco_detect-checkpoint.launch  aruco_slam-checkpoint.launch
akros_test/launch/misc_launch/.ipynb_checkpoints/: pcl_extract_polygonal_prism_data-checkpoint.launch
akros_test/src/: oakd_imu_node.cpp
akros_test/src/.ipynb_checkpoints/: oakd_rgbd_imu_node-checkpoint.cpp  oakd_rgbd_inertial_nodelet-checkpoint.cpp
config/: laser_filter_config.yaml
launch/: akros_2d.launch  akros_fiducial_slam.launch  akros_hector_slam.launch  akros_hectorslam_mapping.launch  akros_nnd.launch  akros_rgbd.launch  akros_stereo.launch  akros_stereo_filtered.launch  demo_amcl.launch  demo_bringup.launch  demo_bringup_2d.launch  demo_bringup_3d.launch  demo_drive.launch  demo_fiducial_slam.launch  demo_hector_no_odom.launch  demo_hector_slam.launch  demo_move_base.launch  move_base.launch  pointcloud_lidar_filtered.launch  pointcloud_node.launch  pointcloud_nodelet.launch  pointcloud_rgbd.launch  pointcloud_rgbd_filtered.launch  (+5 more)
(+148 files in other folders)
