<?xml version="1.0"?>
<package format="2">
  <name>akros_behaviors</name>
  <version>0.0.0</version>
  <description>Behaviors for the AKROS robot</description>

 <maintainer email="adityakamath@live.com">Aditya Kamath</maintainer>
  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>sensor_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
